--- a/ShaderPrecompiler/packages.config
+++ b/ShaderPrecompiler/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineArgumentsParser" version="3.0.13" targetFramework="net35" />
+  <package id="NLog" version="4.4.11" targetFramework="net35" />
+  <package id="NLog.Config" version="4.4.11" targetFramework="net35" />
+  <package id="NLog.Schema" version="4.4.11" targetFramework="net35" />
 </packages>
